@@ -1267,6 +1267,8 @@ block|,
 literal|"y z x y z a b"
 block|,
 literal|"lets is a the lets is a the lets is a the lets"
+block|,
+literal|"Attribute instances are reused for all tokens of a document. Thus, a TokenStream/-Filter needs to update the appropriate Attribute(s) in incrementToken(). The consumer, commonly the Lucene indexer, consumes the data in the Attributes and then calls incrementToken() again until it retuns false, which indicates that the end of the stream was reached. This means that in each call of incrementToken() a TokenStream/-Filter can safely overwrite the data in the Attribute instances. "
 block|}
 decl_stmt|;
 comment|// Convenience method for succinct tests; doesn't represent "best practice"
@@ -2646,6 +2648,173 @@ expr_stmt|;
 block|}
 comment|// Not sure we can assert anything here - just running to check we dont
 comment|// throw any exceptions
+block|}
+comment|// LUCENE-2229
+DECL|method|testSimpleSpanHighlighterWithStopWordsStraddlingFragmentBoundaries
+specifier|public
+name|void
+name|testSimpleSpanHighlighterWithStopWordsStraddlingFragmentBoundaries
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doSearching
+argument_list|(
+operator|new
+name|PhraseQuery
+argument_list|(
+name|FIELD_NAME
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"tokens"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|int
+name|maxNumFragmentsRequired
+init|=
+literal|1
+decl_stmt|;
+name|QueryScorer
+name|scorer
+init|=
+operator|new
+name|QueryScorer
+argument_list|(
+name|query
+argument_list|,
+name|FIELD_NAME
+argument_list|)
+decl_stmt|;
+name|Highlighter
+name|highlighter
+init|=
+operator|new
+name|Highlighter
+argument_list|(
+name|scorer
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Must have one hit"
+argument_list|,
+literal|1
+argument_list|,
+name|hits
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|hits
+operator|.
+name|totalHits
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|String
+name|text
+init|=
+name|searcher
+operator|.
+name|doc
+argument_list|(
+name|hits
+operator|.
+name|scoreDocs
+index|[
+name|i
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+name|FIELD_NAME
+argument_list|)
+decl_stmt|;
+name|TokenStream
+name|tokenStream
+init|=
+name|analyzer
+operator|.
+name|tokenStream
+argument_list|(
+name|FIELD_NAME
+argument_list|,
+name|text
+argument_list|)
+decl_stmt|;
+name|highlighter
+operator|.
+name|setTextFragmenter
+argument_list|(
+operator|new
+name|SimpleSpanFragmenter
+argument_list|(
+name|scorer
+argument_list|,
+literal|36
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|result
+init|=
+name|highlighter
+operator|.
+name|getBestFragments
+argument_list|(
+name|tokenStream
+argument_list|,
+name|text
+argument_list|,
+name|maxNumFragmentsRequired
+argument_list|,
+literal|"..."
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|VERBOSE
+condition|)
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"\t"
+operator|+
+name|result
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Fragment must be less than 60 characters long"
+argument_list|,
+name|result
+operator|.
+name|length
+argument_list|()
+operator|<
+literal|60
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|// LUCENE-1752
 DECL|method|testRepeatingTermsInMultBooleans
